--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 # some news
 
+2015-05-04 -> update toolchain to reflect slackware current updates
 
 2015-04-13 -> add script to clone useful external repos
