--- a/external/README
+++ b/external/README
@@ -1,6 +1,5 @@
 # README
 
-
 Possible content cloned via script get_external_repos.sh:
 
 # REPOs
@@ -10,3 +9,6 @@ Possible content cloned via script get_external_repos.sh:
 # rt-tests -> http://git.kernel.org/pub/scm/linux/kernel/git/clrkwllms/rt-tests.git
 # ipipe -> git://git.xenomai.org/ipipe.git/
 # xenomai -> git://git.xenomai.org/xenomai-3.git/
+# olimex-docs -> http://github.com/OLIMEX/OLINUXINO.git
+# uboot -> git://git.denx.de/u-boot.git
+# mydriver -> https://github.com/tjohann/mydriver.git
