Changes:	sync TODO and NEWS 		update buildroot config

--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,26 @@
-# some news
+#
+# some news ... see also TODO for hints
+#
 
-2015-05-23 -> update toolchain to v3 (for x86_64)
+2015-05-23 -> ## toolchain stuff 
+	      update toolchain to v3 (for x86_64)
 	      add buildroot config to use sysroot
 	      add some default addtions to sysroot like libconfuse ...
+
+	      ## script stuff
+	      add u-boot, olimex docs and mydriver and remove old stuff
+
+	      ## target stuff
 	      add kernel config for 4.0.4 with rt1
-	      remove aria and rpusbdispl parts -> i have no more access to those devices
 
-2015-05-04 -> update toolchain to reflect slackware current updates
+	      ## sdk stuff 
+	      remove aria and rpusbdispl parts -> i have no more access to those
+	      devices
+	      rework ${ARMEL_HOME}/external/makefile to make individual clones
+	      possible (needed on the target)
 
-2015-04-13 -> add script to clone useful external repos
+2015-05-04 -> ## target stuff
+	      update toolchain to reflect slackware current updates
+
+2015-04-13 -> ## script stuff
+	      add script to clone useful external repos
