Changes:	start adding license info to all relevant files 		add 00-INDEX file to give an short overview of the dir content 		remove at91bootstrap path for aria

--- a/TODO
+++ b/TODO
@@ -4,6 +4,12 @@
 
 
 #
+# -------------- 2015-05-24 --------------------------------------------------------------------
+#
+## sdk stuff
+-> add lizense info to all file
+
+#
 # -------------- 2015-05-23 --------------------------------------------------------------------
 #
 
