--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 # some news ... see also TODO for hints
 #
 
+
+2015-05-25 -> ## docu stuff
+	      add "make docs" skeleton
+	      
 2015-05-24 -> ## sdk stuff
 	      add 00-INDEX as an info to all dir (where it makes sense)
 	      add license info to all file
