--- a/TODO
+++ b/TODO
@@ -3,8 +3,11 @@
 #
 
 #
-# -------------- 2015-05-xx --------------------------------------------------------------------
+# -------------- 2015-05-25 --------------------------------------------------------------------
 #
+
+## docu stuff
+-> create man pages for scripts below ./bin
 
 
 #
