--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@
 # some news ... see also TODO for hints
 #
 
+2015-06-88 -> !!! IMPORTANT !!!
+	      Complete re-organisation of naming sheme for the toolchain!
+	      The version numbers start again with version 1 but also with support for
+	      armv7hl and host parts 
+ 
+2015-06-88 -> ## sdk stuff
+	      add can-utils and libsocketcan to external
+	      add support for host_* parts of the toolchain
 
 2015-05-25 -> ## docu stuff
 	      add "make docs" skeleton
