Some bug fixes and minor updates

--- a/Documentation/doc_arm926sdk/doc_arm926sdk.tex
+++ b/Documentation/doc_arm926sdk/doc_arm926sdk.tex
@@ -1,5 +1,5 @@
 % arm926_sdk : description
-% Thorsten JohannvorderbrÃ¼ggen
+% Thorsten Johannvorderbrüggen
 \documentclass[12pt, a4paper]{report}
 \usepackage[latin1]{inputenc}
 \usepackage{ngerman,a4}
