--- a/src/libirc/man/libirc.3
+++ b/src/libirc/man/libirc.3
@@ -1,12 +1,12 @@
-.\" Manpage for libi2c
+.\" Manpage for libirc
 .\" Contact thorsten.johannvorderbrueggen@t-online.de to correct errors or typos.
-.TH libi2c 3 "07 May 2015" "0.0.1" "libi2c man page"
+.TH libirc 3 "07 May 2015" "0.0.1" "librc man page"
 .SH NAME
 libi2c
-\-\- some useful i2c functions
+\-\- some useful irc functions
 .SH SYNOPSIS
 .PP
-#include \fI <libi2c.h>\fP 
+#include \fI <libirc.h>\fP 
 .PP
 tbd ... void some_func(void);
 .br
@@ -18,13 +18,13 @@ This functions are part of the
 .BR arm926_sdk
 (https://github.com/tjohann/arm926_sdk)
 .PP
-The functions implement some useful i2c functions
+The functions implement some useful irc functions
 .PP
 .SH FILES
-.BR libi2c.c 
+.BR libirc.c 
 \- function implementation
 .br
-.BR libi2c.h 
+.BR libirc.h 
 \- interface header 
 .br 
 .PP
