--- a/arietta/configs/kernel_config_minimal_4.2.5
+++ b/arietta/configs/kernel_config_minimal_4.2.5
@@ -930,7 +930,8 @@ CONFIG_NET_VENDOR_HISILICON=y
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 CONFIG_NET_VENDOR_MICROCHIP=y
-# CONFIG_ENC28J60 is not set
+CONFIG_ENC28J60=y
+# CONFIG_ENC28J60_WRITEVERIFY is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
 # CONFIG_ETHOC is not set
 CONFIG_NET_VENDOR_QUALCOMM=y
