add integration list update NEWS

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 # some news ... see also TODO for hints
 #
 
+2016-01-04 -> ## script stuff
+	      add my sllin repo to external
+
 2015-11-17 -> ## toolchain stuff
 	      add project dir for led dot clock
 
