--- a/external/README
+++ b/external/README
@@ -1,21 +1,23 @@
-# README
+README external repos
+=========
 
-Possible content cloned via script get_external_repos.sh:
+Content cloned via script get_external_git_repos.sh (all additional repos) or via make tag like "make get_uboot" for u-boot repo
 
-# REPOs
-# at91bootstrap -> git://github.com/tanzilli/at91bootstrap.git
-# linus -> git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
-# rt-tests -> http://git.kernel.org/pub/scm/linux/kernel/git/clrkwllms/rt-tests.git
-# ipipe -> git://git.xenomai.org/ipipe.git/
-# xenomai -> git://git.xenomai.org/xenomai-3.git/
-# uboot -> git://git.denx.de/u-boot.git
-# mydriver -> https://github.com/tjohann/mydriver.git
-# can-utils -> https://github.com/linux-can/can-utils.git
-# libsocketcan -> git://git.pengutronix.de/git/tools/libsocketcan.git
-# void-packages -> https://github.com/voidlinux/void-packages.git
-# libbaalue -> https://github.com/tjohann/libbaalue.git
-# baalued -> https://github.com/tjohann/baalued.git
-# sllin -> https://github.com/tjohann/sllin.git"
-# clock -> https://github.com/tjohann/led_dot_matrix_clock
 
-#EOF
+Addtional Repos
+-------------------
+
+	# at91bootstrap -> git://github.com/tanzilli/at91bootstrap.git
+	# linus -> git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
+	# rt-tests -> http://git.kernel.org/pub/scm/linux/kernel/git/clrkwllms/rt-tests.git
+	# ipipe -> git://git.xenomai.org/ipipe.git/
+	# xenomai -> git://git.xenomai.org/xenomai-3.git/
+	# uboot -> git://git.denx.de/u-boot.git
+	# mydriver -> https://github.com/tjohann/mydriver.git
+	# can-utils -> https://github.com/linux-can/can-utils.git
+	# libsocketcan -> git://git.pengutronix.de/git/tools/libsocketcan.git
+	# void-packages -> https://github.com/voidlinux/void-packages.git
+	# sllin -> https://github.com/tjohann/sllin.git"
+	# clock -> https://github.com/tjohann/led_dot_matrix_clock
+	# my_sllin -> "https://github.com/tjohann/sllin.git"
+
