--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 # some news ... see also TODO for hints
 #
 
+2016-02-21 -> ## target stuff
+	      update kernel to 4.4.2 and 4.4.1-rt6
+
 2016-01-04 -> ## script stuff
 	      add my sllin repo to external
 
