--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@
 # some news ... see also TODO for hints
 #
 
+2016-04-08 -> ## toolchain stuff
+	      start preparation for new architecture like a20_sdk.git
+
+	      ## script stuff
+	      some cleanups
+
 2016-02-28 -> ## target stuff
 	      update kernel to 4.4.3 and 4.4.2-rt7
 
