--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 # some news ... see also TODO for hints
 #
 
+2016-05-18 -> ## target stuff
+	      update kernel to 4.4.68 and 4.4.66-rt79
+
 2016-04-28 -> ## target stuff
 	      update kernel to 4.4.17 and 4.4.17-rt25
 
